# Anticheat

./: .env  .gitignore  README.md
backend/: Cargo.toml  auth_payload.json  build_error.txt  cookies.txt
backend/src/: build.rs  lib.rs  main.rs
backend/src/auth/: api_key.rs  jwt.rs  mod.rs
backend/src/config/: config.rs  mod.rs
backend/src/handlers/: auth.rs  dashboard_api.rs  ingest.rs  mod.rs  realtime.rs
backend/src/middleware/: mod.rs
backend/src/models/: mod.rs  organization.rs
backend/src/openapi/: mod.rs
backend/src/router/: mod.rs
backend/src/telemetry/: mod.rs
client_sdk/: Cargo.toml
client_sdk/src/: main.rs
tools/screenshots/: capture.js  capture_client.js  package-lock.json  package.json
web/: agents.html  alerts.html  auth.css  auth.js  design-tokens.css  forgot.html  index.html  login.html  script.js  styles.css
