[package]
name = "anticheat"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace", "cors", "compression-full", "limit", "fs"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
anyhow = "1.0.81"
thiserror = "2.0.16"
dotenvy = "0.15"

utoipa-axum = { version = "0.2.0" }
chrono = { version = "0.4.34", features = ["serde"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
futures = "0.3.30"
headers = "0.4.1"
axum-extra = { version = "0.10.1", features = ["cookie-private"] }
async-trait = "0.1"
jsonwebtoken = "9.3.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde"] }
validator = { version = "0.20.0", features = ["derive"] }
config = "0.15.4"
once_cell = "1.19"
utoipa = { version = "5.4.0", features = ["chrono"] }
argon2 = "0.5.3"
rand = "0.8.5"

[build-dependencies]
chrono = "0.4.34"
